# inventree-brother-plugin

./: pyproject.toml
